add quran apps directory project

--- a/projects.json
+++ b/projects.json
@@ -149,6 +149,16 @@
       "icon": "⏰",
       "category": "personal",
       "order": 14
+    },
+    {
+      "id": "quran-apps-directory",
+      "owner": "Itqan-community",
+      "repo": "quran-apps-directory",
+      "name": "دليل التطبيقات القرآنية",
+      "publisher": "إتقان",
+      "icon": "📚",
+      "category": "platform",
+      "order": 15
     }
   ],
   "settings": {
